Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ID

Grammar

Rule 0     S' -> expr
Rule 1     expr -> expr PLUS expr
Rule 2     expr -> expr MINUS expr
Rule 3     expr -> expr TIMES expr
Rule 4     expr -> expr DIVIDE expr
Rule 5     expr -> expr GT expr
Rule 6     expr -> expr GE expr
Rule 7     expr -> expr IE expr
Rule 8     expr -> expr LE expr
Rule 9     expr -> expr LT expr
Rule 10    expr -> expr NE expr
Rule 11    expr -> expr OR expr
Rule 12    expr -> expr AND expr
Rule 13    expr -> NOT expr
Rule 14    expr -> expr IN expr
Rule 15    expr -> list
Rule 16    list -> LIST
Rule 17    expr -> num
Rule 18    num -> NUMBER
Rule 19    expr -> float
Rule 20    float -> FLOAT
Rule 21    expr -> str
Rule 22    str -> STR
Rule 23    expr -> none
Rule 24    none -> NONE
Rule 25    expr -> LPAREN expr RPAREN
Rule 26    expr -> MINUS expr

Terminals, with rules where they appear

AND                  : 12
DIVIDE               : 4
FLOAT                : 20
GE                   : 6
GT                   : 5
ID                   : 
IE                   : 7
IN                   : 14
LE                   : 8
LIST                 : 16
LPAREN               : 25
LT                   : 9
MINUS                : 2 26
NE                   : 10
NONE                 : 24
NOT                  : 13
NUMBER               : 18
OR                   : 11
PLUS                 : 1
RPAREN               : 25
STR                  : 22
TIMES                : 3
error                : 

Nonterminals, with rules where they appear

expr                 : 1 1 2 2 3 3 4 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 14 14 25 26 0
float                : 19
list                 : 15
none                 : 23
num                  : 17
str                  : 21

Parsing method: LALR

state 0

    (0) S' -> . expr
    (1) expr -> . expr PLUS expr
    (2) expr -> . expr MINUS expr
    (3) expr -> . expr TIMES expr
    (4) expr -> . expr DIVIDE expr
    (5) expr -> . expr GT expr
    (6) expr -> . expr GE expr
    (7) expr -> . expr IE expr
    (8) expr -> . expr LE expr
    (9) expr -> . expr LT expr
    (10) expr -> . expr NE expr
    (11) expr -> . expr OR expr
    (12) expr -> . expr AND expr
    (13) expr -> . NOT expr
    (14) expr -> . expr IN expr
    (15) expr -> . list
    (17) expr -> . num
    (19) expr -> . float
    (21) expr -> . str
    (23) expr -> . none
    (25) expr -> . LPAREN expr RPAREN
    (26) expr -> . MINUS expr
    (16) list -> . LIST
    (18) num -> . NUMBER
    (20) float -> . FLOAT
    (22) str -> . STR
    (24) none -> . NONE

    NOT             shift and go to state 3
    LPAREN          shift and go to state 9
    MINUS           shift and go to state 2
    LIST            shift and go to state 10
    NUMBER          shift and go to state 11
    FLOAT           shift and go to state 12
    STR             shift and go to state 13
    NONE            shift and go to state 14

    expr                           shift and go to state 1
    list                           shift and go to state 4
    num                            shift and go to state 5
    float                          shift and go to state 6
    str                            shift and go to state 7
    none                           shift and go to state 8

state 1

    (0) S' -> expr .
    (1) expr -> expr . PLUS expr
    (2) expr -> expr . MINUS expr
    (3) expr -> expr . TIMES expr
    (4) expr -> expr . DIVIDE expr
    (5) expr -> expr . GT expr
    (6) expr -> expr . GE expr
    (7) expr -> expr . IE expr
    (8) expr -> expr . LE expr
    (9) expr -> expr . LT expr
    (10) expr -> expr . NE expr
    (11) expr -> expr . OR expr
    (12) expr -> expr . AND expr
    (14) expr -> expr . IN expr

    PLUS            shift and go to state 15
    MINUS           shift and go to state 16
    TIMES           shift and go to state 17
    DIVIDE          shift and go to state 18
    GT              shift and go to state 19
    GE              shift and go to state 20
    IE              shift and go to state 21
    LE              shift and go to state 22
    LT              shift and go to state 23
    NE              shift and go to state 24
    OR              shift and go to state 25
    AND             shift and go to state 26
    IN              shift and go to state 27


state 2

    (26) expr -> MINUS . expr
    (1) expr -> . expr PLUS expr
    (2) expr -> . expr MINUS expr
    (3) expr -> . expr TIMES expr
    (4) expr -> . expr DIVIDE expr
    (5) expr -> . expr GT expr
    (6) expr -> . expr GE expr
    (7) expr -> . expr IE expr
    (8) expr -> . expr LE expr
    (9) expr -> . expr LT expr
    (10) expr -> . expr NE expr
    (11) expr -> . expr OR expr
    (12) expr -> . expr AND expr
    (13) expr -> . NOT expr
    (14) expr -> . expr IN expr
    (15) expr -> . list
    (17) expr -> . num
    (19) expr -> . float
    (21) expr -> . str
    (23) expr -> . none
    (25) expr -> . LPAREN expr RPAREN
    (26) expr -> . MINUS expr
    (16) list -> . LIST
    (18) num -> . NUMBER
    (20) float -> . FLOAT
    (22) str -> . STR
    (24) none -> . NONE

    NOT             shift and go to state 3
    LPAREN          shift and go to state 9
    MINUS           shift and go to state 2
    LIST            shift and go to state 10
    NUMBER          shift and go to state 11
    FLOAT           shift and go to state 12
    STR             shift and go to state 13
    NONE            shift and go to state 14

    expr                           shift and go to state 28
    list                           shift and go to state 4
    num                            shift and go to state 5
    float                          shift and go to state 6
    str                            shift and go to state 7
    none                           shift and go to state 8

state 3

    (13) expr -> NOT . expr
    (1) expr -> . expr PLUS expr
    (2) expr -> . expr MINUS expr
    (3) expr -> . expr TIMES expr
    (4) expr -> . expr DIVIDE expr
    (5) expr -> . expr GT expr
    (6) expr -> . expr GE expr
    (7) expr -> . expr IE expr
    (8) expr -> . expr LE expr
    (9) expr -> . expr LT expr
    (10) expr -> . expr NE expr
    (11) expr -> . expr OR expr
    (12) expr -> . expr AND expr
    (13) expr -> . NOT expr
    (14) expr -> . expr IN expr
    (15) expr -> . list
    (17) expr -> . num
    (19) expr -> . float
    (21) expr -> . str
    (23) expr -> . none
    (25) expr -> . LPAREN expr RPAREN
    (26) expr -> . MINUS expr
    (16) list -> . LIST
    (18) num -> . NUMBER
    (20) float -> . FLOAT
    (22) str -> . STR
    (24) none -> . NONE

    NOT             shift and go to state 3
    LPAREN          shift and go to state 9
    MINUS           shift and go to state 2
    LIST            shift and go to state 10
    NUMBER          shift and go to state 11
    FLOAT           shift and go to state 12
    STR             shift and go to state 13
    NONE            shift and go to state 14

    expr                           shift and go to state 29
    list                           shift and go to state 4
    num                            shift and go to state 5
    float                          shift and go to state 6
    str                            shift and go to state 7
    none                           shift and go to state 8

state 4

    (15) expr -> list .

    PLUS            reduce using rule 15 (expr -> list .)
    MINUS           reduce using rule 15 (expr -> list .)
    TIMES           reduce using rule 15 (expr -> list .)
    DIVIDE          reduce using rule 15 (expr -> list .)
    GT              reduce using rule 15 (expr -> list .)
    GE              reduce using rule 15 (expr -> list .)
    IE              reduce using rule 15 (expr -> list .)
    LE              reduce using rule 15 (expr -> list .)
    LT              reduce using rule 15 (expr -> list .)
    NE              reduce using rule 15 (expr -> list .)
    OR              reduce using rule 15 (expr -> list .)
    AND             reduce using rule 15 (expr -> list .)
    IN              reduce using rule 15 (expr -> list .)
    $end            reduce using rule 15 (expr -> list .)
    RPAREN          reduce using rule 15 (expr -> list .)


state 5

    (17) expr -> num .

    PLUS            reduce using rule 17 (expr -> num .)
    MINUS           reduce using rule 17 (expr -> num .)
    TIMES           reduce using rule 17 (expr -> num .)
    DIVIDE          reduce using rule 17 (expr -> num .)
    GT              reduce using rule 17 (expr -> num .)
    GE              reduce using rule 17 (expr -> num .)
    IE              reduce using rule 17 (expr -> num .)
    LE              reduce using rule 17 (expr -> num .)
    LT              reduce using rule 17 (expr -> num .)
    NE              reduce using rule 17 (expr -> num .)
    OR              reduce using rule 17 (expr -> num .)
    AND             reduce using rule 17 (expr -> num .)
    IN              reduce using rule 17 (expr -> num .)
    $end            reduce using rule 17 (expr -> num .)
    RPAREN          reduce using rule 17 (expr -> num .)


state 6

    (19) expr -> float .

    PLUS            reduce using rule 19 (expr -> float .)
    MINUS           reduce using rule 19 (expr -> float .)
    TIMES           reduce using rule 19 (expr -> float .)
    DIVIDE          reduce using rule 19 (expr -> float .)
    GT              reduce using rule 19 (expr -> float .)
    GE              reduce using rule 19 (expr -> float .)
    IE              reduce using rule 19 (expr -> float .)
    LE              reduce using rule 19 (expr -> float .)
    LT              reduce using rule 19 (expr -> float .)
    NE              reduce using rule 19 (expr -> float .)
    OR              reduce using rule 19 (expr -> float .)
    AND             reduce using rule 19 (expr -> float .)
    IN              reduce using rule 19 (expr -> float .)
    $end            reduce using rule 19 (expr -> float .)
    RPAREN          reduce using rule 19 (expr -> float .)


state 7

    (21) expr -> str .

    PLUS            reduce using rule 21 (expr -> str .)
    MINUS           reduce using rule 21 (expr -> str .)
    TIMES           reduce using rule 21 (expr -> str .)
    DIVIDE          reduce using rule 21 (expr -> str .)
    GT              reduce using rule 21 (expr -> str .)
    GE              reduce using rule 21 (expr -> str .)
    IE              reduce using rule 21 (expr -> str .)
    LE              reduce using rule 21 (expr -> str .)
    LT              reduce using rule 21 (expr -> str .)
    NE              reduce using rule 21 (expr -> str .)
    OR              reduce using rule 21 (expr -> str .)
    AND             reduce using rule 21 (expr -> str .)
    IN              reduce using rule 21 (expr -> str .)
    $end            reduce using rule 21 (expr -> str .)
    RPAREN          reduce using rule 21 (expr -> str .)


state 8

    (23) expr -> none .

    PLUS            reduce using rule 23 (expr -> none .)
    MINUS           reduce using rule 23 (expr -> none .)
    TIMES           reduce using rule 23 (expr -> none .)
    DIVIDE          reduce using rule 23 (expr -> none .)
    GT              reduce using rule 23 (expr -> none .)
    GE              reduce using rule 23 (expr -> none .)
    IE              reduce using rule 23 (expr -> none .)
    LE              reduce using rule 23 (expr -> none .)
    LT              reduce using rule 23 (expr -> none .)
    NE              reduce using rule 23 (expr -> none .)
    OR              reduce using rule 23 (expr -> none .)
    AND             reduce using rule 23 (expr -> none .)
    IN              reduce using rule 23 (expr -> none .)
    $end            reduce using rule 23 (expr -> none .)
    RPAREN          reduce using rule 23 (expr -> none .)


state 9

    (25) expr -> LPAREN . expr RPAREN
    (1) expr -> . expr PLUS expr
    (2) expr -> . expr MINUS expr
    (3) expr -> . expr TIMES expr
    (4) expr -> . expr DIVIDE expr
    (5) expr -> . expr GT expr
    (6) expr -> . expr GE expr
    (7) expr -> . expr IE expr
    (8) expr -> . expr LE expr
    (9) expr -> . expr LT expr
    (10) expr -> . expr NE expr
    (11) expr -> . expr OR expr
    (12) expr -> . expr AND expr
    (13) expr -> . NOT expr
    (14) expr -> . expr IN expr
    (15) expr -> . list
    (17) expr -> . num
    (19) expr -> . float
    (21) expr -> . str
    (23) expr -> . none
    (25) expr -> . LPAREN expr RPAREN
    (26) expr -> . MINUS expr
    (16) list -> . LIST
    (18) num -> . NUMBER
    (20) float -> . FLOAT
    (22) str -> . STR
    (24) none -> . NONE

    NOT             shift and go to state 3
    LPAREN          shift and go to state 9
    MINUS           shift and go to state 2
    LIST            shift and go to state 10
    NUMBER          shift and go to state 11
    FLOAT           shift and go to state 12
    STR             shift and go to state 13
    NONE            shift and go to state 14

    expr                           shift and go to state 30
    list                           shift and go to state 4
    num                            shift and go to state 5
    float                          shift and go to state 6
    str                            shift and go to state 7
    none                           shift and go to state 8

state 10

    (16) list -> LIST .

    PLUS            reduce using rule 16 (list -> LIST .)
    MINUS           reduce using rule 16 (list -> LIST .)
    TIMES           reduce using rule 16 (list -> LIST .)
    DIVIDE          reduce using rule 16 (list -> LIST .)
    GT              reduce using rule 16 (list -> LIST .)
    GE              reduce using rule 16 (list -> LIST .)
    IE              reduce using rule 16 (list -> LIST .)
    LE              reduce using rule 16 (list -> LIST .)
    LT              reduce using rule 16 (list -> LIST .)
    NE              reduce using rule 16 (list -> LIST .)
    OR              reduce using rule 16 (list -> LIST .)
    AND             reduce using rule 16 (list -> LIST .)
    IN              reduce using rule 16 (list -> LIST .)
    $end            reduce using rule 16 (list -> LIST .)
    RPAREN          reduce using rule 16 (list -> LIST .)


state 11

    (18) num -> NUMBER .

    PLUS            reduce using rule 18 (num -> NUMBER .)
    MINUS           reduce using rule 18 (num -> NUMBER .)
    TIMES           reduce using rule 18 (num -> NUMBER .)
    DIVIDE          reduce using rule 18 (num -> NUMBER .)
    GT              reduce using rule 18 (num -> NUMBER .)
    GE              reduce using rule 18 (num -> NUMBER .)
    IE              reduce using rule 18 (num -> NUMBER .)
    LE              reduce using rule 18 (num -> NUMBER .)
    LT              reduce using rule 18 (num -> NUMBER .)
    NE              reduce using rule 18 (num -> NUMBER .)
    OR              reduce using rule 18 (num -> NUMBER .)
    AND             reduce using rule 18 (num -> NUMBER .)
    IN              reduce using rule 18 (num -> NUMBER .)
    $end            reduce using rule 18 (num -> NUMBER .)
    RPAREN          reduce using rule 18 (num -> NUMBER .)


state 12

    (20) float -> FLOAT .

    PLUS            reduce using rule 20 (float -> FLOAT .)
    MINUS           reduce using rule 20 (float -> FLOAT .)
    TIMES           reduce using rule 20 (float -> FLOAT .)
    DIVIDE          reduce using rule 20 (float -> FLOAT .)
    GT              reduce using rule 20 (float -> FLOAT .)
    GE              reduce using rule 20 (float -> FLOAT .)
    IE              reduce using rule 20 (float -> FLOAT .)
    LE              reduce using rule 20 (float -> FLOAT .)
    LT              reduce using rule 20 (float -> FLOAT .)
    NE              reduce using rule 20 (float -> FLOAT .)
    OR              reduce using rule 20 (float -> FLOAT .)
    AND             reduce using rule 20 (float -> FLOAT .)
    IN              reduce using rule 20 (float -> FLOAT .)
    $end            reduce using rule 20 (float -> FLOAT .)
    RPAREN          reduce using rule 20 (float -> FLOAT .)


state 13

    (22) str -> STR .

    PLUS            reduce using rule 22 (str -> STR .)
    MINUS           reduce using rule 22 (str -> STR .)
    TIMES           reduce using rule 22 (str -> STR .)
    DIVIDE          reduce using rule 22 (str -> STR .)
    GT              reduce using rule 22 (str -> STR .)
    GE              reduce using rule 22 (str -> STR .)
    IE              reduce using rule 22 (str -> STR .)
    LE              reduce using rule 22 (str -> STR .)
    LT              reduce using rule 22 (str -> STR .)
    NE              reduce using rule 22 (str -> STR .)
    OR              reduce using rule 22 (str -> STR .)
    AND             reduce using rule 22 (str -> STR .)
    IN              reduce using rule 22 (str -> STR .)
    $end            reduce using rule 22 (str -> STR .)
    RPAREN          reduce using rule 22 (str -> STR .)


state 14

    (24) none -> NONE .

    PLUS            reduce using rule 24 (none -> NONE .)
    MINUS           reduce using rule 24 (none -> NONE .)
    TIMES           reduce using rule 24 (none -> NONE .)
    DIVIDE          reduce using rule 24 (none -> NONE .)
    GT              reduce using rule 24 (none -> NONE .)
    GE              reduce using rule 24 (none -> NONE .)
    IE              reduce using rule 24 (none -> NONE .)
    LE              reduce using rule 24 (none -> NONE .)
    LT              reduce using rule 24 (none -> NONE .)
    NE              reduce using rule 24 (none -> NONE .)
    OR              reduce using rule 24 (none -> NONE .)
    AND             reduce using rule 24 (none -> NONE .)
    IN              reduce using rule 24 (none -> NONE .)
    $end            reduce using rule 24 (none -> NONE .)
    RPAREN          reduce using rule 24 (none -> NONE .)


state 15

    (1) expr -> expr PLUS . expr
    (1) expr -> . expr PLUS expr
    (2) expr -> . expr MINUS expr
    (3) expr -> . expr TIMES expr
    (4) expr -> . expr DIVIDE expr
    (5) expr -> . expr GT expr
    (6) expr -> . expr GE expr
    (7) expr -> . expr IE expr
    (8) expr -> . expr LE expr
    (9) expr -> . expr LT expr
    (10) expr -> . expr NE expr
    (11) expr -> . expr OR expr
    (12) expr -> . expr AND expr
    (13) expr -> . NOT expr
    (14) expr -> . expr IN expr
    (15) expr -> . list
    (17) expr -> . num
    (19) expr -> . float
    (21) expr -> . str
    (23) expr -> . none
    (25) expr -> . LPAREN expr RPAREN
    (26) expr -> . MINUS expr
    (16) list -> . LIST
    (18) num -> . NUMBER
    (20) float -> . FLOAT
    (22) str -> . STR
    (24) none -> . NONE

    NOT             shift and go to state 3
    LPAREN          shift and go to state 9
    MINUS           shift and go to state 2
    LIST            shift and go to state 10
    NUMBER          shift and go to state 11
    FLOAT           shift and go to state 12
    STR             shift and go to state 13
    NONE            shift and go to state 14

    expr                           shift and go to state 31
    list                           shift and go to state 4
    num                            shift and go to state 5
    float                          shift and go to state 6
    str                            shift and go to state 7
    none                           shift and go to state 8

state 16

    (2) expr -> expr MINUS . expr
    (1) expr -> . expr PLUS expr
    (2) expr -> . expr MINUS expr
    (3) expr -> . expr TIMES expr
    (4) expr -> . expr DIVIDE expr
    (5) expr -> . expr GT expr
    (6) expr -> . expr GE expr
    (7) expr -> . expr IE expr
    (8) expr -> . expr LE expr
    (9) expr -> . expr LT expr
    (10) expr -> . expr NE expr
    (11) expr -> . expr OR expr
    (12) expr -> . expr AND expr
    (13) expr -> . NOT expr
    (14) expr -> . expr IN expr
    (15) expr -> . list
    (17) expr -> . num
    (19) expr -> . float
    (21) expr -> . str
    (23) expr -> . none
    (25) expr -> . LPAREN expr RPAREN
    (26) expr -> . MINUS expr
    (16) list -> . LIST
    (18) num -> . NUMBER
    (20) float -> . FLOAT
    (22) str -> . STR
    (24) none -> . NONE

    NOT             shift and go to state 3
    LPAREN          shift and go to state 9
    MINUS           shift and go to state 2
    LIST            shift and go to state 10
    NUMBER          shift and go to state 11
    FLOAT           shift and go to state 12
    STR             shift and go to state 13
    NONE            shift and go to state 14

    expr                           shift and go to state 32
    list                           shift and go to state 4
    num                            shift and go to state 5
    float                          shift and go to state 6
    str                            shift and go to state 7
    none                           shift and go to state 8

state 17

    (3) expr -> expr TIMES . expr
    (1) expr -> . expr PLUS expr
    (2) expr -> . expr MINUS expr
    (3) expr -> . expr TIMES expr
    (4) expr -> . expr DIVIDE expr
    (5) expr -> . expr GT expr
    (6) expr -> . expr GE expr
    (7) expr -> . expr IE expr
    (8) expr -> . expr LE expr
    (9) expr -> . expr LT expr
    (10) expr -> . expr NE expr
    (11) expr -> . expr OR expr
    (12) expr -> . expr AND expr
    (13) expr -> . NOT expr
    (14) expr -> . expr IN expr
    (15) expr -> . list
    (17) expr -> . num
    (19) expr -> . float
    (21) expr -> . str
    (23) expr -> . none
    (25) expr -> . LPAREN expr RPAREN
    (26) expr -> . MINUS expr
    (16) list -> . LIST
    (18) num -> . NUMBER
    (20) float -> . FLOAT
    (22) str -> . STR
    (24) none -> . NONE

    NOT             shift and go to state 3
    LPAREN          shift and go to state 9
    MINUS           shift and go to state 2
    LIST            shift and go to state 10
    NUMBER          shift and go to state 11
    FLOAT           shift and go to state 12
    STR             shift and go to state 13
    NONE            shift and go to state 14

    expr                           shift and go to state 33
    list                           shift and go to state 4
    num                            shift and go to state 5
    float                          shift and go to state 6
    str                            shift and go to state 7
    none                           shift and go to state 8

state 18

    (4) expr -> expr DIVIDE . expr
    (1) expr -> . expr PLUS expr
    (2) expr -> . expr MINUS expr
    (3) expr -> . expr TIMES expr
    (4) expr -> . expr DIVIDE expr
    (5) expr -> . expr GT expr
    (6) expr -> . expr GE expr
    (7) expr -> . expr IE expr
    (8) expr -> . expr LE expr
    (9) expr -> . expr LT expr
    (10) expr -> . expr NE expr
    (11) expr -> . expr OR expr
    (12) expr -> . expr AND expr
    (13) expr -> . NOT expr
    (14) expr -> . expr IN expr
    (15) expr -> . list
    (17) expr -> . num
    (19) expr -> . float
    (21) expr -> . str
    (23) expr -> . none
    (25) expr -> . LPAREN expr RPAREN
    (26) expr -> . MINUS expr
    (16) list -> . LIST
    (18) num -> . NUMBER
    (20) float -> . FLOAT
    (22) str -> . STR
    (24) none -> . NONE

    NOT             shift and go to state 3
    LPAREN          shift and go to state 9
    MINUS           shift and go to state 2
    LIST            shift and go to state 10
    NUMBER          shift and go to state 11
    FLOAT           shift and go to state 12
    STR             shift and go to state 13
    NONE            shift and go to state 14

    expr                           shift and go to state 34
    list                           shift and go to state 4
    num                            shift and go to state 5
    float                          shift and go to state 6
    str                            shift and go to state 7
    none                           shift and go to state 8

state 19

    (5) expr -> expr GT . expr
    (1) expr -> . expr PLUS expr
    (2) expr -> . expr MINUS expr
    (3) expr -> . expr TIMES expr
    (4) expr -> . expr DIVIDE expr
    (5) expr -> . expr GT expr
    (6) expr -> . expr GE expr
    (7) expr -> . expr IE expr
    (8) expr -> . expr LE expr
    (9) expr -> . expr LT expr
    (10) expr -> . expr NE expr
    (11) expr -> . expr OR expr
    (12) expr -> . expr AND expr
    (13) expr -> . NOT expr
    (14) expr -> . expr IN expr
    (15) expr -> . list
    (17) expr -> . num
    (19) expr -> . float
    (21) expr -> . str
    (23) expr -> . none
    (25) expr -> . LPAREN expr RPAREN
    (26) expr -> . MINUS expr
    (16) list -> . LIST
    (18) num -> . NUMBER
    (20) float -> . FLOAT
    (22) str -> . STR
    (24) none -> . NONE

    NOT             shift and go to state 3
    LPAREN          shift and go to state 9
    MINUS           shift and go to state 2
    LIST            shift and go to state 10
    NUMBER          shift and go to state 11
    FLOAT           shift and go to state 12
    STR             shift and go to state 13
    NONE            shift and go to state 14

    expr                           shift and go to state 35
    list                           shift and go to state 4
    num                            shift and go to state 5
    float                          shift and go to state 6
    str                            shift and go to state 7
    none                           shift and go to state 8

state 20

    (6) expr -> expr GE . expr
    (1) expr -> . expr PLUS expr
    (2) expr -> . expr MINUS expr
    (3) expr -> . expr TIMES expr
    (4) expr -> . expr DIVIDE expr
    (5) expr -> . expr GT expr
    (6) expr -> . expr GE expr
    (7) expr -> . expr IE expr
    (8) expr -> . expr LE expr
    (9) expr -> . expr LT expr
    (10) expr -> . expr NE expr
    (11) expr -> . expr OR expr
    (12) expr -> . expr AND expr
    (13) expr -> . NOT expr
    (14) expr -> . expr IN expr
    (15) expr -> . list
    (17) expr -> . num
    (19) expr -> . float
    (21) expr -> . str
    (23) expr -> . none
    (25) expr -> . LPAREN expr RPAREN
    (26) expr -> . MINUS expr
    (16) list -> . LIST
    (18) num -> . NUMBER
    (20) float -> . FLOAT
    (22) str -> . STR
    (24) none -> . NONE

    NOT             shift and go to state 3
    LPAREN          shift and go to state 9
    MINUS           shift and go to state 2
    LIST            shift and go to state 10
    NUMBER          shift and go to state 11
    FLOAT           shift and go to state 12
    STR             shift and go to state 13
    NONE            shift and go to state 14

    expr                           shift and go to state 36
    list                           shift and go to state 4
    num                            shift and go to state 5
    float                          shift and go to state 6
    str                            shift and go to state 7
    none                           shift and go to state 8

state 21

    (7) expr -> expr IE . expr
    (1) expr -> . expr PLUS expr
    (2) expr -> . expr MINUS expr
    (3) expr -> . expr TIMES expr
    (4) expr -> . expr DIVIDE expr
    (5) expr -> . expr GT expr
    (6) expr -> . expr GE expr
    (7) expr -> . expr IE expr
    (8) expr -> . expr LE expr
    (9) expr -> . expr LT expr
    (10) expr -> . expr NE expr
    (11) expr -> . expr OR expr
    (12) expr -> . expr AND expr
    (13) expr -> . NOT expr
    (14) expr -> . expr IN expr
    (15) expr -> . list
    (17) expr -> . num
    (19) expr -> . float
    (21) expr -> . str
    (23) expr -> . none
    (25) expr -> . LPAREN expr RPAREN
    (26) expr -> . MINUS expr
    (16) list -> . LIST
    (18) num -> . NUMBER
    (20) float -> . FLOAT
    (22) str -> . STR
    (24) none -> . NONE

    NOT             shift and go to state 3
    LPAREN          shift and go to state 9
    MINUS           shift and go to state 2
    LIST            shift and go to state 10
    NUMBER          shift and go to state 11
    FLOAT           shift and go to state 12
    STR             shift and go to state 13
    NONE            shift and go to state 14

    expr                           shift and go to state 37
    list                           shift and go to state 4
    num                            shift and go to state 5
    float                          shift and go to state 6
    str                            shift and go to state 7
    none                           shift and go to state 8

state 22

    (8) expr -> expr LE . expr
    (1) expr -> . expr PLUS expr
    (2) expr -> . expr MINUS expr
    (3) expr -> . expr TIMES expr
    (4) expr -> . expr DIVIDE expr
    (5) expr -> . expr GT expr
    (6) expr -> . expr GE expr
    (7) expr -> . expr IE expr
    (8) expr -> . expr LE expr
    (9) expr -> . expr LT expr
    (10) expr -> . expr NE expr
    (11) expr -> . expr OR expr
    (12) expr -> . expr AND expr
    (13) expr -> . NOT expr
    (14) expr -> . expr IN expr
    (15) expr -> . list
    (17) expr -> . num
    (19) expr -> . float
    (21) expr -> . str
    (23) expr -> . none
    (25) expr -> . LPAREN expr RPAREN
    (26) expr -> . MINUS expr
    (16) list -> . LIST
    (18) num -> . NUMBER
    (20) float -> . FLOAT
    (22) str -> . STR
    (24) none -> . NONE

    NOT             shift and go to state 3
    LPAREN          shift and go to state 9
    MINUS           shift and go to state 2
    LIST            shift and go to state 10
    NUMBER          shift and go to state 11
    FLOAT           shift and go to state 12
    STR             shift and go to state 13
    NONE            shift and go to state 14

    expr                           shift and go to state 38
    list                           shift and go to state 4
    num                            shift and go to state 5
    float                          shift and go to state 6
    str                            shift and go to state 7
    none                           shift and go to state 8

state 23
